--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,12 @@
     @apply bg-background text-foreground;
   }
 }
+.hidden-scroll {
+  overflow: auto; /* scrolling still works */
+  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.hidden-scroll::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
